--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run Hadolint against Dockerfile
-      run: |
-        echo "Add Hadolint GitHub Actions here"
-        exit 1
+      uses: hadolint/hadolint-action@v1.5.0
+      with:
+        dockerfile: Dockerfile
+        failure-threshold: error
 
   build:
     runs-on: ubuntu-latest
